# xde-sounds

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  README.md.in  RELEASE.md  THANKS  TODO  configure.ac
man/: Makefile.am  sound.pod
src/: Makefile.am  genfiles.sh
src/sounds/: sayit.sh  sayitf.sh  sayitm.sh  synthesize.sh
src/sounds/Incredibles/: index.theme
src/sounds/Incredibles/stereo/: alarm-clock-elapsed.oga  audio-channel-front-left.oga  audio-channel-rear-center.oga  audio-channel-right.oga  audio-test-signal.oga  battery-caution.oga  battery-charging.oga  battery-discharging.oga  battery-empty.oga  battery-full.oga  battery-low.oga  bell-terminal.oga  bell.oga  button-toggle-off.oga  camera-focus.oga  camera-shutter.oga  complete-copy.oga  complete-download.oga  complete-media-burn.oga  complete-media-rip.oga  complete-print.oga  complete.oga  completion-rotation.oga  completion-success.oga  count-down.oga  desktop-created.oga  desktop-destroyed.oga  desktop-layout-changed.oga  desktop-login.oga  desktop-mode-floating.oga  desktop-mode-grid.oga  desktop-mode-monocle.oga  desktop-mode-tiled-bottom.oga  desktop-mode-tiled-left.oga  desktop-mode-tiled-right.oga  desktop-mode-tiled-top.oga  desktop-mode-tiled.oga  desktop-screen-lock.oga  desktop-screen-unlock.oga  desktop-session-checkpoint.oga  (+132 more)
src/sounds/XDE/: index.theme
src/sounds/flite-F/: index.theme
src/sounds/flite-F/stereo/: alarm-clock-elapsed.oga  audio-channel-front-center.oga  audio-channel-front-right.oga  audio-channel-left.oga  audio-channel-lfe.oga  audio-channel-rear-left.oga  audio-channel-rear-right.oga  audio-channel-side-left.oga  audio-channel-side-right.oga  audio-test-signal.oga  audio-volume-change.oga  battery-caution.oga  battery-full.oga  battery-low.oga  bell-terminal.oga  bell-window-system.oga  bell.oga  busytone.oga  button-pressed.oga  button-released.oga  button-toggle-off.oga  button-toggle-on.oga  camera-focus.oga  camera-shutter.oga  complete-copy.oga  complete-download.oga  complete-media-burn.oga  complete-media-rip.oga  complete-media.oga  complete-print.oga  complete-scan.oga  complete.oga  completion-fail.oga  completion-partial.oga  completion-rotation.oga  completion-success.oga  count-down.oga  desktop-created.oga  desktop-destroyed.oga  desktop-layout-changed.oga  (+186 more)
src/sounds/flite-M/: .gitignore  index.theme
src/sounds/flite-M/stereo/: alarm-clock-elapsed.oga  audio-channel-front-center.oga  audio-channel-front-left.oga  audio-channel-front-right.oga  audio-channel-left.oga  audio-channel-lfe.oga  audio-channel-rear-center.oga  audio-channel-rear-left.oga  audio-channel-rear-right.oga  audio-channel-right.oga  audio-channel-side-left.oga  audio-channel-side-right.oga  audio-test-signal.oga  audio-volume-change.oga  battery-caution.oga  battery-full.oga  battery-low.oga  bell-terminal.oga  bell-window-system.oga  bell.oga  busytone.oga  button-pressed.oga  button-released.oga  button-toggle-off.oga  button-toggle-on.oga  camera-focus.oga  camera-shutter.oga  complete-copy.oga  complete-download.oga  complete-media-burn.oga  complete-media-rip.oga  complete-media.oga  complete-print.oga  complete-scan.oga  complete.oga  completion-fail.oga  completion-partial.oga  completion-rotation.oga  completion-success.oga  count-down.oga  (+193 more)
src/sounds/freedesktop/stereo/: alarm-clock-elapsed.sound  audio-channel-front-center.sound  audio-channel-front-left.sound  audio-channel-front-right.sound  audio-channel-left.sound  audio-channel-lfe.sound  audio-channel-rear-center.sound  audio-channel-rear-left.sound  audio-channel-rear-right.sound  audio-channel-right.sound  audio-channel-side-left.sound  audio-channel-side-right.sound  audio-test-signal.sound  audio-volume-change.sound  battery-caution-keyboard.sound  battery-caution-mouse.sound  battery-caution.sound  battery-charging-keyboard.sound  battery-charging-mouse.sound  battery-charging.sound  battery-discharging-keyboard.sound  battery-discharging-mouse.sound  battery-discharging.sound  battery-empty-keyboard.sound  battery-empty-mouse.sound  battery-empty.sound  battery-full-keyboard.sound  battery-full-mouse.sound  battery-full.sound  battery-low-keyboard.sound  battery-low-mouse.sound  battery-low.sound  bell-terminal.sound  bell-window-system.sound  bell.sound  busytone.sound  button-pressed.sound  button-released.sound  button-toggle-off.sound  button-toggle-on.sound  (+283 more)
src/sounds/xde/stereo/: DoorClose.oga  DoorCreak.oga  cardshuffle.oga  desktop-screen-lock.oga  desktop-screen-unlock.oga  desktop-switch-down.oga  desktop-switch.oga  dummy-message.oga  ednamodeandguest.oga  game-card-shuffle.oga  game-over.oga  gameover.oga  lid-close.oga  lid-open.oga  neverlookbackdarling.oga  shutdown.oga  startup.oga  system-bootup.oga  system-shutdown-reboot.oga  system-shutdown.oga  weeek.oga  whoosh.oga  whoosh1.oga  window-slide.oga  windowshade.oga
